--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.2",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/uuid": "^9.0.6",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
